--- a/styles/main.scss
+++ b/styles/main.scss
@@ -8,7 +8,7 @@
 }
 @font-face {
   font-family: "Air Strip Arabic";
-  src: url(../css/fonts/Air\ Strip\ Arabic.ttf);
+  src: url("../css/fonts/Air\ Strip\ Arabic.ttf");
 }
 * {
   box-sizing: border-box;
@@ -27,7 +27,7 @@
   padding-right: 15px;
 
   h1 {
-    font-family: "Air Strip Arabic";
+    font-family: "Air Strip Arabic",sans-serif;
     font-size: 56px;
 
   }
