--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Cairo&family=Manrope&display=swap");
 :root {
   --main-color: #BA9743;
   --bg-color: #161615;
-  --font-1: Cairo
+  --font-1: 'Cairo', sans-serif
 ;
 }
 
@@ -13,6 +14,11 @@
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+}
+
+body {
+  overflow-x: hidden;
+  background-color: var(--bg-color);
 }
 
 .bg-primary {
@@ -77,11 +83,6 @@
 
 .rtl {
   direction: rtl !important;
-}
-
-body {
-  overflow-x: hidden;
-  background-color: var(--bg-color);
 }
 
 .text-primary {
@@ -363,6 +364,10 @@ a:hover {
   font-family: var(--font-1);
 }
 
+.owl-theme .owl-controls {
+  margin-top: 0 !important;
+}
+
 @media screen and (max-width: 767px) {
   .video .itme-card-video:hover .text-box-img {
     height: 75px;
@@ -389,9 +394,9 @@ a:hover {
   .text-hero p {
     font-size: 17px;
   }
-}
-
-.owl-theme .owl-controls {
-  margin-top: 0 !important;
+  .owl-next,
+  .owl-prev {
+    display: none;
+  }
 }
 /*# sourceMappingURL=main.css.map */
