--- a/styles/main.scss
+++ b/styles/main.scss
@@ -263,8 +263,8 @@ footer ul li {
   background-color: #43d954;
   position: fixed;
   z-index: 1000;
-  width: 50px;
-  height: 50px;
+  width: 70px;
+  height: 70px;
   border-radius: 50%;
   display: flex;
   bottom: 25px;
@@ -428,6 +428,9 @@ a:hover {
   .owl-next,
   .owl-prev{
     display: none !important;
+  }
+  .video .owl-pagination{
+    display: none;
   }
 }
 
