--- a/styles/main.css
+++ b/styles/main.css
@@ -35,13 +35,29 @@ body {
 }
 
 .text-hero h1 {
-  font-family: "Air Strip Arabic",sans-serif;
+  font-family: "Air Strip Arabic", sans-serif;
   font-size: 56px;
 }
 
 .text-hero p {
   font-family: var(--font-1);
   font-size: 18px;
+}
+
+.text-hero-2 {
+  border-right: 5px solid var(--main-color);
+  padding-right: 15px;
+}
+
+.text-hero-2 h1 {
+  font-family: "Air Strip Arabic", sans-serif;
+  font-size: 60px;
+}
+
+.text-hero-2 p {
+  font-family: var(--font-1);
+  font-size: 20px;
+  margin-top: 35px;
 }
 
 .owl-theme .owl-controls .owl-page.active span {
@@ -55,6 +71,26 @@ body {
 
 .hero {
   background-image: url("../images/img8.png");
+  background-position: center top;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  padding-bottom: 50px;
+  z-index: 1;
+}
+
+.hero-2 {
+  background-image: url("../images/img14.jpeg");
+  background-position: center top;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  padding-bottom: 50px;
+  z-index: 1;
+}
+
+.hero-3 {
+  background-image: url("../images/img15.png");
   background-position: center top;
   background-repeat: no-repeat;
   background-size: cover;
@@ -86,6 +122,32 @@ body {
   height: 100%;
   z-index: -1;
   background-color: rgba(0, 0, 0, 0.546);
+  opacity: 0.8;
+  font-family: "Abdo Master";
+}
+
+.hero-2::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background-color: rgba(0, 0, 0, 0.651);
+  opacity: 0.8;
+  font-family: "Abdo Master";
+}
+
+.hero-3::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background-color: rgba(0, 0, 0, 0.651);
   opacity: 0.8;
   font-family: "Abdo Master";
 }
@@ -256,8 +318,8 @@ footer ul li {
   background-color: #43d954;
   position: fixed;
   z-index: 1000;
-  width: 70px;
-  height: 70px;
+  width: 60px;
+  height: 60px;
   border-radius: 50%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -373,6 +435,65 @@ a:hover {
 
 .owl-theme .owl-controls {
   margin-top: 0 !important;
+}
+
+.img-thumbnail {
+  width: 100% !important;
+}
+
+.carousel-indicators {
+  position: absolute;
+  bottom: -230px;
+}
+
+.form-aqar h3 {
+  font-family: var(--font-1);
+  font-weight: 500;
+  font-size: 23px;
+}
+
+.form-aqar .form-aqar-input {
+  background-color: rgba(0, 0, 0, 0.61);
+}
+
+.form-aqar .btn-aqar {
+  color: #fff;
+  border: 1px solid var(--main-color);
+  font-family: var(--font-1);
+}
+
+.apartments {
+  font-family: var(--font-1);
+}
+
+.apartments h4 {
+  font-weight: 700;
+  font-size: 35px;
+}
+
+.apartments .hover-box {
+  cursor: pointer;
+}
+
+.apartments .hover-box:hover h4 {
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  color: var(--main-color) !important;
+}
+
+.apartments li,
+.apartments span {
+  font-size: 20px;
+}
+
+.apartments li {
+  display: inline-block;
+  margin: 5px 0;
+}
+
+.img-thumbnail {
+  width: 100%;
+  height: 100%;
 }
 
 @media screen and (max-width: 767px) {
