--- a/styles/main.css
+++ b/styles/main.css
@@ -492,11 +492,27 @@ a:hover {
 }
 
 .img-thumbnail {
+  background: none;
+  border: none;
+}
+
+.carousel-item img {
   width: 100%;
-  height: 100%;
+  height: 400px;
 }
 
 @media screen and (max-width: 767px) {
+  .carousel-item img {
+    height: 200px;
+  }
+  .apartments h4 {
+    font-weight: 700;
+    font-size: 30px;
+  }
+  .apartments li,
+  .apartments span {
+    font-size: 18px;
+  }
   .video .itme-card-video:hover .text-box-img {
     height: 75px;
   }
