--- a/styles/main.scss
+++ b/styles/main.scss
@@ -519,14 +519,37 @@ a:hover {
   }
 }
 .img-thumbnail{
-  width: 100%;
-  height: 100%;
+
+  background:none;
+  border: none;
+}
+.carousel-item {
+  img{
+    width: 100%;
+    height: 400px;
+  }
 }
 @media screen and (min-width:1024px) {}
 
 @media screen and (min-width:768px) and (max-width:1023px) {}
 
 @media screen and (max-width:767px) {
+  .carousel-item {
+    img{
+      height: 200px;
+    }
+  }
+  .apartments {
+    h4 {
+      font-weight: 700;
+      font-size: 30px;
+    }
+    li,
+    span {
+      font-size: 18px;
+    }
+  
+  }
   .video {
     .itme-card-video {
       &:hover {
