--- a/styles/main.scss
+++ b/styles/main.scss
@@ -566,7 +566,11 @@ a:hover {
 
   .title-section {
     h2 {
-      font-size: 45px;
+      font-size: 38px;
+    }
+    p {
+ 
+      margin-top: 18px;
     }
   }
 
