--- a/styles/main.scss
+++ b/styles/main.scss
@@ -605,4 +605,10 @@ a:hover {
   .video .owl-pagination {
     display: none;
   }
+  .bg-subscribe {
+    p {
+      font-family: var(--font-1);
+      font-size: 30px;
+    }
+  }
 }
