--- a/styles/main.scss
+++ b/styles/main.scss
@@ -287,16 +287,31 @@ footer ul li {
   border-radius: 5px;
 }
 
+.hover-btn {
+  &:hover {
+    .show-btn {
+      display: block;
+    }
+  }
+
+  .show-btn {
+    display: none;
+  }
+}
+
 .itme-card-news {
   cursor: pointer;
   overflow: hidden;
   transition: all 0.5s ease-in-out;
+  position: relative;
 
   &:hover {
     .text-box-img {
       height: 120px;
       transition: all 0.5s ease-in-out;
     }
+
+
   }
 
   .text-box-img {
@@ -331,6 +346,20 @@ footer ul li {
 }
 
 .btn-primary:hover {
+  border-color: #000;
+}
+
+.btn-primary-2 {
+  background-color: var(--main-color) !important;
+  border-color: #000;
+  border-radius: 8px;
+  padding: 6px 20px;
+  font-family: var(--font-1);
+  font-size: 18px;
+  color: #fff;
+}
+
+.btn-primary-2:hover {
   border-color: #000;
 }
 
@@ -518,38 +547,44 @@ a:hover {
     margin: 5px 0;
   }
 }
-.img-thumbnail{
 
-  background:none;
+.img-thumbnail {
+
+  background: none;
   border: none;
 }
+
 .carousel-item {
-  img{
+  img {
     width: 100%;
     height: 400px;
   }
 }
+
 @media screen and (min-width:1024px) {}
 
 @media screen and (min-width:768px) and (max-width:1023px) {}
 
 @media screen and (max-width:767px) {
   .carousel-item {
-    img{
+    img {
       height: 200px;
     }
   }
+
   .apartments {
     h4 {
       font-weight: 700;
       font-size: 30px;
     }
+
     li,
     span {
       font-size: 18px;
     }
-  
+
   }
+
   .video {
     .itme-card-video {
       &:hover {
@@ -568,8 +603,9 @@ a:hover {
     h2 {
       font-size: 38px;
     }
+
     p {
- 
+
       margin-top: 18px;
     }
   }
@@ -605,6 +641,7 @@ a:hover {
   .video .owl-pagination {
     display: none;
   }
+
   .bg-subscribe {
     p {
       font-family: var(--font-1);
