--- a/styles/main.scss
+++ b/styles/main.scss
@@ -649,3 +649,10 @@ a:hover {
     }
   }
 }
+.copyright{
+  p{
+    color: #fff;
+    font-family: var(--font-1);
+    letter-spacing: 3px;
+  }
+}
